src/objects/Program__c.object
<CustomObject>
    <description>This is used to create Educational Program</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is this an active program?</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>What is the close date for the program?</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <description>When was the program opened?</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <description>Name of the program</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_State__c</fullName>
        <description>where is the program located?</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Program State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_code__c</fullName>
        <description>What is the program code?</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Program code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the school offering the program.</description>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Program</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Program Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>